# ascii

./: .gitignore  LICENSE  README.md  ascii.py  conversion.py  pyproject.toml  setup.py  video.py
ascii/: asciify.py  converter.py  image.py  kernels.py  memory.py  palattes.py  palettes.py  preprocess.py  video.py
asciify/: animate.py  image.py  memory.py  run.py  video.py
asciify/utils/: palettes.py  sampler.py
