[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asciify"
version = "1.0.0"
description = "Produce ascii character representations of images and videos."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Greyson Brothers", email = "greysonbrothers@gmail.com" }
]

dependencies = [
    "tqdm",
    "numpy",
    "torch",
    "pillow",
    "argparse",
    "opencv-python",
]
[tool.setuptools.packages.find]
include = ["asciify", "asciify.*"]

[tool.setuptools.package-data]
asciify = ["fonts/*.ttf"]

[project.scripts]
asciify = "asciify.run:main"

[project.urls]
Homepage = "https://github.com/agbrothers/asciify"
Issues = "https://github.com/agbrothers/asciify/issues"
